hphp/hack/test/sound_dynamic/typing/generic_params.bad.php.exp
File "generic_params.bad.php", line 18, characters 17-31:
Invalid argument (Typing[4110])
  File "generic_params.bad.php", line 18, characters 25-27:
  Expected `int`
  File "generic_params.bad.php", line 16, characters 24-30:
  But got `dynamic`
  File "generic_params.bad.php", line 16, characters 24-30:
  This type argument to `Box` must match exactly (it is invariant)
File "generic_params.bad.php", line 19, characters 17-42:
Invalid argument (Typing[4110])
  File "generic_params.bad.php", line 19, characters 31-36:
  Expected `string`
  File "generic_params.bad.php", line 16, characters 24-30:
  But got `dynamic`
  File "generic_params.bad.php", line 16, characters 24-30:
  This type argument to `SimpleBox` must match exactly (it is invariant)
File "generic_params.bad.php", line 20, characters 17-34:
Invalid argument (Typing[4110])
  File "generic_params.bad.php", line 20, characters 28-30:
  Expected `int`
  File "generic_params.bad.php", line 16, characters 24-30:
  But got `(dynamic & arraykey)`
  File "generic_params.bad.php", line 16, characters 24-30:
  This type argument to `KeyBox` must match exactly (it is invariant)
File "generic_params.bad.php", line 29, characters 7-16:
Class AnotherBox must support dynamic at least as often as Getter:
Getter<vec<T>> is subtype of dynamic implies AnotherBox<T> is subtype of dynamic (Typing[4433])
  File "generic_params.bad.php", line 29, characters 18-18:
  Expected `T`
  File "generic_params.bad.php", line 29, characters 7-16:
  But got `dynamic`
  File "generic_params.bad.php", line 29, characters 7-16:
  This type argument to `AnotherBox` must match exactly (it is invariant)
